GUI for MessageViewer improved.

--- a/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/gui.lfm
+++ b/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/gui.lfm
@@ -3,6 +3,7 @@ object MainForm: TMainForm
   Height = 570
   Top = 160
   Width = 834
+  ActiveControl = SegmentsGroupBox
   Caption = 'HL7 Message Viewer'
   ClientHeight = 570
   ClientWidth = 834
@@ -14,7 +15,15 @@ object MainForm: TMainForm
     Height = 15
     Top = 555
     Width = 834
-    Panels = <>
+    Panels = <    
+      item
+        Text = '  Status Code: --'
+        Width = 250
+      end    
+      item
+        Width = 50
+      end>
+    SimplePanel = False
   end
   object ToolBar1: TToolBar
     Left = 0
@@ -22,24 +31,48 @@ object MainForm: TMainForm
     Top = 0
     Width = 834
     Caption = 'ToolBar1'
+    Images = ImageList1
     TabOrder = 1
-    object OpenButton: TButton
+    object NewButton: TToolButton
       Left = 1
-      Height = 22
+      Hint = 'New message...'
       Top = 2
-      Width = 75
-      Caption = 'Open...'
-      OnClick = OpenButtonClick
-      TabOrder = 0
+      Caption = 'NewButton'
+      Enabled = False
+      ImageIndex = 0
+      ParentShowHint = False
+      ShowHint = True
     end
-    object SaveButton: TButton
-      Left = 76
-      Height = 22
+    object OpenButton: TToolButton
+      Left = 24
+      Hint = 'Open message...'
       Top = 2
-      Width = 75
-      Caption = 'Save...'
-      OnClick = SaveButtonClick
-      TabOrder = 1
+      Caption = 'OpenButton'
+      ImageIndex = 1
+      OnClick = OpenItemClick
+      ParentShowHint = False
+      ShowHint = True
+    end
+    object SaveButton: TToolButton
+      Left = 47
+      Hint = 'Save message...'
+      Top = 2
+      Caption = 'SaveButton'
+      Enabled = False
+      ImageIndex = 2
+      OnClick = SaveItemClick
+      ParentShowHint = False
+      ShowHint = True
+    end
+    object SaveAsButton: TToolButton
+      Left = 70
+      Hint = 'Save message as...'
+      Top = 2
+      Caption = 'SaveAsButton'
+      ImageIndex = 3
+      OnClick = SaveItemClick
+      ParentShowHint = False
+      ShowHint = True
     end
   end
   object PairSplitter1: TPairSplitter
@@ -49,44 +82,44 @@ object MainForm: TMainForm
     Top = 26
     Width = 834
     Align = alClient
-    Position = 400
+    Position = 370
     SplitterType = pstVertical
     object PairSplitterSide1: TPairSplitterSide
       Cursor = crArrow
       Left = 0
-      Height = 400
+      Height = 370
       Top = 0
       Width = 834
       ClientWidth = 834
-      ClientHeight = 400
+      ClientHeight = 370
       object ScrollBox1: TScrollBox
         Left = 0
-        Height = 400
+        Height = 370
         Top = 0
         Width = 834
         HorzScrollBar.Page = 834
-        VertScrollBar.Page = 400
+        VertScrollBar.Page = 370
         Align = alClient
         Anchors = [akTop, akLeft, akRight]
-        ClientHeight = 400
+        ClientHeight = 370
         ClientWidth = 834
         TabOrder = 0
         object ComponentsGroupBox: TGroupBox
           AnchorSideBottom.Control = ScrollBox1
           AnchorSideBottom.Side = asrBottom
           Left = 411
-          Height = 376
-          Top = 24
+          Height = 357
+          Top = 13
           Width = 200
           Anchors = [akTop, akLeft, akBottom]
           BorderSpacing.Right = 5
           Caption = 'Components'
-          ClientHeight = 354
+          ClientHeight = 335
           ClientWidth = 192
           TabOrder = 0
           object ComponentsListBox: TListBox
             Left = 2
-            Height = 345
+            Height = 326
             Top = 5
             Width = 188
             Anchors = [akTop, akLeft, akRight, akBottom]
@@ -102,17 +135,17 @@ object MainForm: TMainForm
           AnchorSideBottom.Control = ScrollBox1
           AnchorSideBottom.Side = asrBottom
           Left = 616
-          Height = 376
-          Top = 24
+          Height = 357
+          Top = 13
           Width = 200
           Anchors = [akTop, akLeft, akBottom]
           Caption = 'Subcomponents'
-          ClientHeight = 354
+          ClientHeight = 335
           ClientWidth = 192
           TabOrder = 1
           object SubComponentsListBox: TListBox
             Left = 2
-            Height = 345
+            Height = 326
             Top = 5
             Width = 188
             Anchors = [akTop, akLeft, akRight, akBottom]
@@ -125,18 +158,18 @@ object MainForm: TMainForm
         end
         object SegmentsGroupBox: TGroupBox
           Left = 0
-          Height = 376
-          Top = 24
+          Height = 357
+          Top = 13
           Width = 200
           Anchors = [akTop, akLeft, akBottom]
           BorderSpacing.Right = 5
           Caption = 'Segments'
-          ClientHeight = 354
+          ClientHeight = 335
           ClientWidth = 192
           TabOrder = 2
           object SegmentsListBox: TListBox
             Left = 2
-            Height = 345
+            Height = 326
             Top = 5
             Width = 187
             Anchors = [akTop, akLeft, akRight, akBottom]
@@ -150,19 +183,19 @@ object MainForm: TMainForm
         end
         object FieldsGroupBox: TGroupBox
           Left = 206
-          Height = 376
-          Top = 24
+          Height = 357
+          Top = 13
           Width = 200
           Anchors = [akTop, akLeft, akBottom]
           BorderSpacing.Left = 8
           BorderSpacing.Right = 5
           Caption = 'Fields'
-          ClientHeight = 354
+          ClientHeight = 335
           ClientWidth = 192
           TabOrder = 3
           object FieldsListBox: TListBox
             Left = 2
-            Height = 345
+            Height = 326
             Top = 5
             Width = 188
             Anchors = [akTop, akLeft, akRight, akBottom]
@@ -179,24 +212,24 @@ object MainForm: TMainForm
     object PairSplitterSide2: TPairSplitterSide
       Cursor = crArrow
       Left = 0
-      Height = 124
-      Top = 405
+      Height = 154
+      Top = 375
       Width = 834
       ClientWidth = 834
-      ClientHeight = 124
+      ClientHeight = 154
       object MessageGroupBox: TGroupBox
         Left = 0
-        Height = 124
+        Height = 154
         Top = 0
         Width = 834
         Align = alClient
         Caption = 'Message'
-        ClientHeight = 102
+        ClientHeight = 132
         ClientWidth = 826
         TabOrder = 0
         object MessageMemo: TMemo
           Left = 0
-          Height = 102
+          Height = 132
           Top = 0
           Width = 826
           Align = alClient
@@ -230,11 +263,11 @@ object MainForm: TMainForm
       end
       object OpenItem: TMenuItem
         Caption = 'Open'
-        OnClick = OpenButtonClick
+        OnClick = OpenItemClick
       end
       object SaveItem: TMenuItem
         Caption = 'Save'
-        OnClick = SaveButtonClick
+        OnClick = SaveItemClick
       end
       object Divider12: TMenuItem
         Caption = '-'
@@ -270,5 +303,140 @@ object MainForm: TMainForm
         Enabled = False
       end
     end
+  end
+  object ImageList1: TImageList
+    left = 256
+    top = 16
+    Bitmap = {
+      4C690400000010000000100000009E9E9EA3818181FF818181FF818181FF8181
+      81FF818181FF818181FF818181FF818181FF7C8C8CFF729F9FFF6AAEAFFF36E4
+      ED8A09F3FF4502F3FF0F00000000818181FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF9BEEF2FF69F0F7FF4DF2FAFF46EF
+      F7FA28EBF4B60DF3FF6102F3FF09818181FFFFFFFFFFECECECFFEAEAEAFFEAEA
+      EAFFEBEBEBFFEBEBEBFFEBEBEBFFB4EDF0FF6AF0F7FF3AF4FCFF68F6FDFF6AF6
+      FDFF3CF2FBFD1EEFF9A909F3FF37818181FFFFFFFFFFEAEAEAFFEAEAEAFFEBEB
+      EBFFEBEBEBFFECECECFFECECECFF9CEEF2FF4EF2FAFF67F6FDFFB5FAFEFFB8FA
+      FEFF6BF5FDFF22EFFAD10DF3FF5C818181FFFFFFFFFFEAEAEAFFEBEBEBFFEBEB
+      EBFFECECECFFECECECFFECECECFF9BEFF3FF4EF2FAFF6AF6FDFFBBFAFEFFBFFB
+      FEFF6EF6FDFF22F0FAD20DF3FF50818181FFFFFFFFFFEBEBEBFFEBEBEBFFECEC
+      ECFFECECECFFECECECFFEDEDEDFFB1EEF1FF67F1F8FF40F4FDFF71F7FDFF72F7
+      FDFF43F3FCFE24ECF6B60AF3FF25818181FFFFFFFFFFEBEBEBFFEBEBEBFFECEC
+      ECFFECECECFFEDEDEDFFEDEDEDFFE0EEEFFF96EFF4FF63F1F8FF46F3FBFF45F3
+      FBFF5DEFF7FD36DDE67603F3FF01818181FFFFFFFFFFEBEBEBFFECECECFFECEC
+      ECFFEDEDEDFFEDEDEDFFEEEEEEFFEEEEEEFFE2EEEEFFB1F0F3FF92F0F5FF9AF0
+      F5FF779696FF0000000000000000818181FFFFFFFFFFECECECFFECECECFFEDED
+      EDFFEDEDEDFFEEEEEEFFEEEEEEFFEFEFEFFFEFEFEFFFEFEFEFFFF0F0F0FFFFFF
+      FFFF818181FF0000000000000000818181FFFFFFFFFFECECECFFECECECFFEDED
+      EDFFEDEDEDFFEEEEEEFFEEEEEEFFEFEFEFFFEFEFEFFFF0F0F0FFF0F0F0FFFFFF
+      FFFF818181FF0000000000000000818181FFFFFFFFFFECECECFFEDEDEDFFEEEE
+      EEFFEEEEEEFFEFEFEFFFEFEFEFFFF0F0F0FFF1F1F1FFF1F1F1FFF1F1F1FFFFFF
+      FFFF818181FF0000000000000000818181FFFFFFFFFFEDEDEDFFEDEDEDFFEEEE
+      EEFFEEEEEEFFEFEFEFFFF0F0F0FFF0F0F0FFF1F1F1FFF1F1F1FFF2F2F2FFFFFF
+      FFFF818181FF0000000000000000818181FFFFFFFFFFEDEDEDFFEDEDEDFFEEEE
+      EEFFEFEFEFFFEFEFEFFFF0F0F0FFF0F0F0FFF1F1F1FFF2F2F2FFF2F2F2FFFFFF
+      FFFF818181FF0000000000000000818181FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFF818181FF00000000000000009E9E9EA3818181FF818181FF818181FF8181
+      81FF818181FF818181FF818181FF818181FF818181FF818181FF818181FF8181
+      81FF9E9E9E950000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000000000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00EFC2A37EEFC1A2E3EDC09FFFEBBE9DFFE7B793FFE4B28CFFE2AF88FFE0AC
+      84FFDDA980FFDCA57DFFDAA37ACAFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00EEC1A1EBFBF7F4FFFBF7F4FFFBF7F4FFFBF7F4FFFBF7F4FFFBF7F4FFFBF7
+      F4FFFBF7F4FFFBF7F4FFD7A074F8FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00ECBF9EFFFBF7F4FF9CD5A5FF98D3A1FF8BCB93FF82C689FF7EC384FF7AC1
+      80FF76BE7CFFFBF7F4FFD49B6FFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00EBBD9BFFFBF7F4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFBF7F4FFD1976AFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00E9BA98FFFBF7F4FFE9C3A6FFE9C3A6FFE9C3A6FFE9C3A6FFE9C3A6FFE9C3
+      A6FFE9C3A6FFFBF7F4FFCE9364FF34B4D9D05EC2E1FA60C3E2FA60C3E2FA60C3
+      E2FAE7B794FFFBF7F4FFE9C3A6FFFFFFFFFFE8C7ACFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFF7F1EBFFCB8F5FFF36B3DAF8FDFEFEFFFEFFFFFFFEFEFFFFFDFE
+      FFFFE5B48FFFFAF6F2FFE9C6AAFFE9C6ACFFE8C7ACFFE8C7ACFFE9C9B0FFE8C8
+      B0FFE8CCB5FFF2E7DEFFC88A59FF35AFDAF0F7FCFEFF8EE4F8FF91DEF5FF9FE0
+      F5FFE3B18CFFFAF6F1FFEAC9AEFFFFFFFFFFE8C7ACFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFF1E5DBFFC68655FF36AADAF2F1FAFDFF94DEF5FF93DCF4FF81D5
+      F2FFC0A997FF91C1E4FF3594DAFF3594DAFF3594DAFF3594DAFF3594DAFF3594
+      DAFF3594DAFFF0E2D8FFC48654FF35ABDAFAE8F6FBFF7EC5EAFF5BAEE3FF51A8
+      E1FF61ADDFFFEDF6F7FFEDF5F6FFE7EFF3FFE5ECEEFFE5EBEDFFE5EBEDFFF8F3
+      EFFF3594DAFFF0E2D8FFC58A5DFD37A6DAFAFEFFFFFFF8FDFFFFF6FDFFFFF5FC
+      FFFFDEDBD1FFADCAC5FFA6C5C0FFA4C3BDFF9EBDB6FF97BAB3FF92B8B2FFE1CB
+      B7FF3594DAFFC38452FFBB7742B036A1DAF9F6FCFEFFC8F2FCFFB9EFFBFFACEC
+      FAFF8CE4F8FF8AE3F8FF82E1F7FF79DFF7FF6DDDF6FF61DAF5FF57D7F4FFE7F8
+      FDFF3594DAFFFFFFFF00FFFFFF00369ADAF8F2FAFDFFB3EDFAFFA4E9F9FF95E6
+      F8FF85E2F7FF81E1F7FF7AE0F7FF6FDDF6FF62DAF5FF54D6F3FF47D3F2FFE8F9
+      FDFF3594DAFFFFFFFF00FFFFFF003594DAF7EFFAFEFFA1E9F9FF91E5F8FF81E1
+      F7FF72DEF6FF63DAF5FF54D7F4FF47D3F3FF39D0F2FF2ECDF1FF26CBF0FFCAF2
+      FBFF3594DAF7FFFFFF00FFFFFF00338ED9E6DCF0FAF0A7DDF4FD9EDBF4FF96DA
+      F3FF8ED8F3FF86D7F3FF7FD4F2FF79D3F2FF72D2F1FF6CD0F1FF69CFF1FFC2EA
+      F8FE338ED9F0FFFFFF00FFFFFF002C86D8002D88D8A62D87D8EA2D88D8F72D88
+      D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D88D8F72D87D8F72D88
+      D8F12C86D893FFFFFF00FFFFFF00BC6B3671BC6B3690BC6B36CCBC6B36EEBC6B
+      36FABB6B36FEBB6B36FFBB6A36FFBB6A36FFBC6C39FFBD6E3BFFBB6D3AFFBB6B
+      38EFBB703ECBB6693554FFFFFF00BC6B369BF6E0D1FFF7E0D1FFFEFBF8FFFEFB
+      F7FFFDF9F6FFFCF5F0FFFAF0EAFFFBF2EDFFFDF9F6FFFDFAF7FFFBF1EBFFF8E9
+      DFFEECD0BDFBC9895EECB5693563BC6B36D8F6DFD1FFE9AA80FFFEFAF6FFFDFA
+      F6FFC88C64FFFBF3EEFFFBF1EAFFFCF6F2FFFEFBF8FFFCF6F1FFF9ECE2FFF8E7
+      DBFFEED0BAFFECD0BDFFBB703EF8BC6B36F0F6DFD0FFE8A87EFFFCF6F1FFFCF6
+      F1FFC88C64FFFAF1E9FFFBF4EEFFFDFAF7FFFDF9F6FFFAF0E8FFF8E8DDFFF7E6
+      DBFFE1A37AFFEFD5C3FFB76935FEBC6B36FAF5DDCCFFE7A87EFFFAF0E8FFFAF0
+      E8FFC98D66FFFAF0E9FFFDF8F3FFFEFAF8FFFCF4EFFFF9E9DFFFF7E7DBFFF7E5
+      D9FFE0A278FFE7C2A9FFB66835FFBB6B36FEF4DCC9FFE7A77DFFF9ECE1FFF9EC
+      E1FFF9EDE3FFFCF4EEFFFDFAF7FFFDF7F3FFFAEDE5FFF7E7DBFFF7E5D9FFF6E5
+      D8FFDEA077FFE4BEA4FFB46734FFBB6B36FFF4D9C7FFE6A67DFFC88C64FFC98D
+      65FFC98E67FFCB926CFFCB926DFFCA9069FFC88C65FFC88C64FFC88C64FFC88C
+      64FFDA9C74FFE1BA9FFFB36634FFBB6A36FFF2D8C5FFE3A47BFFE3A37AFFE3A4
+      7AFFE2A47BFFE2A37BFFE1A37BFFE1A279FFDFA077FFDE9F76FFDD9E74FFDB9C
+      72FFDC9D74FFDDB59AFFB16534FFBB6A36FFF2D5C2FFE3A37AFFE3A37AFFE2A3
+      7BFFE2A37BFFE2A47BFFE1A279FFE0A178FFDEA077FFDE9E75FFDC9D74FFDA9B
+      73FFD99B73FFDAB095FFAF6433FFBB6A36FFF0D2BEFFE2A37AFFE2A37AFFE1A3
+      7AFFE2A37BFFE1A37BFFE0A178FFDE9F77FFDD9F76FFDC9D74FFD99B72FFD899
+      71FFD69970FFD5AB8EFFAD6333FFBA6A36FFEFD0BBFFE2A27AFFFEFBF8FFFEFB
+      F8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFB
+      F8FFD3966DFFD2A78AFFAB6232FFBB6B38FFEFCEB8FFE1A279FFFEFAF7FF62C0
+      88FF62C088FF62C088FF62C088FF62C088FF62C088FF62C088FF62C088FFFDF9
+      F6FFCF936AFFCEA384FFAA6132FFBB6C38FFEECCB6FFE1A27AFFFEFAF7FFBFDC
+      C2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFBFDCC2FFFDF9
+      F6FFCD9068FFCC9E81FFA86132FFBA6B37FEEDCAB3FFE0A27AFFFEFAF7FF62C0
+      88FF62C088FF62C088FF62C088FF62C088FF62C088FF62C088FF62C088FFFDF9
+      F6FFCA8D65FFC99B7CFFA76031FEBA6A35DEEBC6ADFFEAC5ADFFFEFBF8FFFEFB
+      F8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFBF8FFFEFB
+      F8FFC89A7CFFC79879FFA76031EDBA6A3600B96935B5B86935EEB76835FFB568
+      35FFB46734FFB26634FFB06533FFAE6433FFAC6332FFAA6232FFA96132FFA860
+      31FFA76031FEA66031F1A86131C477856C7C91794D7E8B67386F8B67388C8B67
+      38D48B6738FF8A693DF880714AE57A7858850000000000000000000000000000
+      00000000000000000000000000009270425EBB96627ED1AD815DE6CEB1CDEFDF
+      D0FFECDBC5FFDFC29BFFA08B68FD886E43FD5A7F6A1B00000000000000000000
+      0000000000000000000000000000887F6B96737166FF757062FF856D4AFF9A74
+      41FF9F7844FFD9BF9EFFEBD9C1FFAF8651FF7D6A4EFF6B706EFF6B706EFF6B70
+      6EFF6B706EFF6B706EFF6B706E006E716BFFDDE6E2FFFFFFFFFFD6E1DDFFDDD6
+      C9FFB6996EFF8B6738FFE2CBABFFD3B792FF9B7D54FFE5DFD5FFFFFFFFFFFFFF
+      FFFFFFFFFFFFF4F4F4FF6B706EFF6B7572FFFDFDFDFFEEEEEEFFEDEDEDFFDEE2
+      DFFFB09877FF8B6738FFCAA779FFCEB38FFF8E6B3DFFC3BCACFFEEEDEDFFEEEE
+      EDFFEDEEEDFFF3F4F3FF6B706EFF6B706EFFFCFBFCFFECECEBFF8B6738FF8B67
+      38FF8B6738FF8B6738FFCAA779FFBD9258FF8B6738FF8B6738FF8B6738FF8B67
+      38FFECECECFFF3F3F3FF6B706EFF6B706EFFFAFAFAFFEAE9E9FFC4CFCAFF8B67
+      38FFDCBF98FFBF9F71FFBF9F71FFBF9F71FFC09F73FFD8BB96FF8B6738FFAFA9
+      95FFEAE9EAFFF2F2F2FF6B706EFF6B706EFFF9F9F9FFFAFAFAFFE4E4E4FFBFCB
+      C5FF8B6738FFDCBF98FFC09F73FFC09F73FFDFC8ABFF8B6738FFACA692FFE4E4
+      E4FFF4F4F4FFF1F1F1FF6B706EFF6B706EFFF9F9F9FFEEEEEEFFFAFAFAFFE4E4
+      E4FFBFCBC5FF8B6738FFE3CBACFFDCBF98FF8F6B3BFFACA692FFE4E4E4FFFAFA
+      FAFFEEEEEEFFF1F1F1FF6B706EFF6B706EFFF7F7F7FFE3E3E3FFEEEEEEFFFAFA
+      FAFFFAFAFAFFC8D4CEFF8E6C3FFF8B6738FFB4AE9AFFFAFAFAFFFCFCFCFFEEEE
+      EEFFE3E3E3FFF0F0F0FF6B706EFF6B706EFFA1A4A3FFA1A4A2FFA1A4A3FFA1A4
+      A3FFA1A4A3FFA1A4A3FFA1A4A3FFA1A4A3FFA1A4A3FFA1A4A3FFA1A4A3FFA1A4
+      A3FFA1A4A3FFA1A4A3FF6B706EFF6B706EFFDCDCDCFFDBDBDCFFDBDCDCFFDCDC
+      DCFFDCDBDCFFDBDCDCFFDCDBDCFFDCDCDCFFDBDCDBFFDCDCDBFF000000FFDBDC
+      DCFFDCDCDBFFDCDCDCFF6B706EFF6B706EFFEFEFEFFFADB0AFFFAEB0AEFFAEB0
+      AFFFADB0AEFFADB0AFFFADB0AFFFADB0AFFFADB0AFFFEFEEEFFF000000FFEEEF
+      EEFFEFEEEEFFEFEEEFFF6B706EFF6B706EFFFFFFFFFFB6B8B7FFB6B8B7FFB6B8
+      B7FFB6B8B7FFB6B8B7FFB6B8B7FFB6B8B7FFB6B8B7FFFFFFFFFF000000FFFFFF
+      FFFFFFFFFFFFFFFFFFFF6B706EFF6B706EFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF000000FFFFFF
+      FFFFFFFFFFFFFFFFFFFF6B706EFF6B706E006B706EFF6B706EFF6B706EFF6B70
+      6EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B706EFF6B70
+      6EFF6B706EFF6B706EFF6B706E00
+    }
   end
 end
