EDF Engine: Creating a first scaffold for EDF Test Function Generator

--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/gui.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/gui.lfm
@@ -103,7 +103,7 @@ object MainForm: TMainForm
     object AppleMenu: TMenuItem
       Caption = ''
       object MacAboutItem: TMenuItem
-        Caption = 'About EDF Message Viewer'
+        Caption = 'About EDF Inspector'
         OnClick = MacAboutItemClick
       end
     end
