EDF Engine: Preparing support for reconstructing scaled floating point values from digitized signals.

--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/datarecordgrid.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/datarecordgrid.lfm
@@ -62,6 +62,7 @@ object ValuesGridForm: TValuesGridForm
     Height = 14
     Top = 325
     Width = 592
+    Anchors = [akLeft, akBottom]
     TabOrder = 2
   end
 end
