EDF Engine: Improving plot function of EDF Inspector demo application.

--- a/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/plot.lfm
+++ b/puma-repository-code/trunk/EDFplus engine/Example_Programs/EDF Inspector/plot.lfm
@@ -48,6 +48,7 @@ object PlotForm: TPlotForm
     Top = 24
     Width = 100
     ItemHeight = 13
+    OnChange = ComboBox1Change
     TabOrder = 1
     Text = 'ComboBox1'
   end
